--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 appdirs==1.4.0
 dj-database-url==0.4.2
 Django==1.10.5
+django-crispy-forms==1.6.1
 django-oidc-provider==0.4.4
 ecdsa==0.13
 future==0.16.0
