--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ future==0.16.0
 gevent==1.2.1
 greenlet==0.4.12
 gunicorn==19.6.0
+mysqlclient==1.3.9
 packaging==16.8
+psycopg2==2.6.2
 pycrypto==2.6.1
 pycryptodomex==3.4.3
 pyjwkest==1.3.0
