--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.0
+contextlib2==0.5.4
 dj-database-url==0.4.2
 Django==1.10.5
 django-crispy-forms==1.6.1
@@ -17,6 +18,7 @@ pyjwkest==1.3.0
 pyparsing==2.1.10
 python-jose==1.3.2
 PyYAML==3.12
+raven==6.0.0
 requests==2.13.0
 six==1.10.0
 Werkzeug==0.11.15
