--- a/requirements.txt
+++ b/requirements.txt
@@ -7,11 +7,14 @@ django-oidc-provider==0.4.4
 ecdsa==0.13
 future==0.16.0
 gevent==1.2.1
+google-auth==0.7.0
 greenlet==0.4.12
 gunicorn==19.6.0
 mysqlclient==1.3.9
 packaging==16.8
 psycopg2==2.6.2
+pyasn1==0.2.2
+pyasn1-modules==0.0.8
 pycrypto==2.6.1
 pycryptodomex==3.4.3
 pyjwkest==1.3.0
@@ -20,5 +23,6 @@ python-jose==1.3.2
 PyYAML==3.12
 raven==6.0.0
 requests==2.13.0
+rsa==3.4.2
 six==1.10.0
 Werkzeug==0.11.15
