--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ google-auth==0.7.0
 greenlet==0.4.12
 gunicorn==19.6.0
 mysqlclient==1.3.9
+openid-connect==0.1.0
 packaging==16.8
 psycopg2==2.6.2
 pyasn1==0.2.2
