--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,39 @@
 appdirs==1.4.3
+certifi==2017.1.23
+cffi==1.10.0
 contextlib2==0.5.4
+cryptography==1.7.2
+defusedxml==0.5.0
 dj-database-url==0.4.2
 dj-email-url==0.0.10
 Django==1.10.6
 django-crispy-forms==1.6.1
 ecdsa==0.13
+eight==0.3.3
 future==0.16.0
 gevent==1.2.1
 google-auth==0.7.0
 greenlet==0.4.12
 gunicorn==19.6.0
+idna==2.5
+lxml==3.6.4
 mysqlclient==1.3.9
 openid-connect==0.2.1
 packaging==16.8
 psycopg2==2.6.2
 pyasn1==0.2.2
 pyasn1-modules==0.0.8
+pycparser==2.17
 pycrypto==2.6.1
 pycryptodomex==3.4.3
 pyjwkest==1.3.0
+pyOpenSSL==16.2.0
 pyparsing==2.1.10
 python-jose==1.3.2
 PyYAML==3.12
 raven==6.0.0
 requests==2.13.0
 rsa==3.4.2
+signxml==2.2.4
 six==1.10.0
 Werkzeug==0.11.15
