--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,31 @@
 appdirs==1.4.3
-contextlib2==0.5.4
+cachetools==2.0.0
+contextlib2==0.5.5
 dj-database-url==0.4.2
 dj-email-url==0.0.10
-Django==1.10.6
+Django==1.10
 django-crispy-forms==1.6.1
 ecdsa==0.13
 future==0.16.0
 gevent==1.2.1
-google-auth==0.7.0
+google-auth==1.0.1
 greenlet==0.4.12
-gunicorn==19.6.0
-mysqlclient==1.3.9
+gunicorn==19.7.1
+mysqlclient==1.3.10
 openid-connect==0.2.1
 packaging==16.8
-psycopg2==2.6.2
-pyasn1==0.2.2
+psycopg2==2.7.1
+pyasn1==0.2.3
 pyasn1-modules==0.0.8
 pycrypto==2.6.1
-pycryptodomex==3.4.3
-pyjwkest==1.3.0
-pyparsing==2.1.10
+pycryptodomex==3.4.6
+pyjwkest==1.3.2
+pyparsing==2.2.0
 python-jose==1.3.2
 PyYAML==3.12
 raven==6.0.0
-requests==2.13.0
+requests==2.14.2
 rsa==3.4.2
 six==1.10.0
-Werkzeug==0.11.15
+Werkzeug==0.12.2
 whitenoise==3.3.0
