--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,31 @@
 appdirs==1.4.3
+beautifulsoup4==4.6.0
 cachetools==2.0.0
 contextlib2==0.5.5
+cssutils==1.0.2
 dj-database-url==0.4.2
 dj-email-url==0.0.10
 Django==1.10
 django-crispy-forms==1.6.1
+django-inlinecss==0.1.2
 ecdsa==0.13
 future==0.16.0
 gevent==1.2.1
 google-auth==1.0.1
 greenlet==0.4.12
 gunicorn==19.7.1
+mock==2.0.0
 mysqlclient==1.3.10
 openid-connect==0.2.1
 packaging==16.8
+pbr==3.0.1
 psycopg2==2.7.1
 pyasn1==0.2.3
 pyasn1-modules==0.0.8
 pycrypto==2.6.1
 pycryptodomex==3.4.6
 pyjwkest==1.3.2
+pynliner3==0.6
 pyparsing==2.2.0
 python-jose==1.3.2
 PyYAML==3.12
