--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ contextlib2==0.5.5
 cssutils==1.0.2
 dj-database-url==0.4.2
 dj-email-url==0.0.10
-Django==1.10
+Django==1.11.1
 django-crispy-forms==1.6.1
 django-inlinecss==0.1.2
 ecdsa==0.13
@@ -28,6 +28,7 @@ pyjwkest==1.3.2
 pynliner3==0.6
 pyparsing==2.2.0
 python-jose==1.3.2
+pytz==2017.2
 PyYAML==3.12
 raven==6.0.0
 requests==2.14.2
