Make isort more stable.

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,4 +1,5 @@
 [settings]
 line_length=500
 known_django=django
-sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
+sections=FUTURE,STDLIB,DJANGO,THIRDPARTY,LOCALFOLDER
+default_section=THIRDPARTY
