--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,7 @@ services:
     build:
       context: .
     environment:
-    - DJANGO_SECRET_KEY=x
-    - AIAKOS_HOSTNAME=x
+    - SECRET_KEY=x
     - DATABASE_URL=mysql://root@mysql/accounts
     command: django-admin migrate
 
@@ -26,8 +25,7 @@ services:
     build:
       context: .
     environment:
-    - DJANGO_SECRET_KEY=x
-    - AIAKOS_HOSTNAME=x
+    - SECRET_KEY=x
     - DATABASE_URL=mysql://root@mysql/accounts
     command: django-admin loaddata devdata.yaml
 
@@ -39,8 +37,8 @@ services:
       context: .
     environment:
     - DATABASE_URL=mysql://root@mysql/accounts
-    - DJANGO_SECRET_KEY=x
-    - DEBUG=1
+    - SECRET_KEY=x
     - BASE_URL=http://localhost.aiakosauth.io:2121/
+    - INSECURE_END_SESSION_ENDPOINT
     ports:
     - "2121:80"
