--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,42 @@
-appdirs==1.4.3
 beautifulsoup4==4.6.0
 cachetools==2.0.0
+certifi==2017.4.17
+chardet==3.0.4
 contextlib2==0.5.5
 cssutils==1.0.2
 dj-database-url==0.4.2
 dj-email-url==0.0.10
-Django==1.11.1
+dj12==0.1.1
+Django==1.11.2
+django-cache-url==2.0.0
 django-crispy-forms==1.6.1
 django-inlinecss==0.1.2
 ecdsa==0.13
 future==0.16.0
-gevent==1.2.1
+gevent==1.2.2
 google-auth==1.0.1
 greenlet==0.4.12
 gunicorn==19.7.1
+idna==2.5
 mock==2.0.0
 mysqlclient==1.3.10
-openid-connect==0.2.1
-packaging==16.8
+openid-connect==0.3.1
 pbr==3.0.1
 psycopg2==2.7.1
 pyasn1==0.2.3
-pyasn1-modules==0.0.8
+pyasn1-modules==0.0.9
 pycrypto==2.6.1
 pycryptodomex==3.4.6
-pyjwkest==1.3.2
+pyjwkest==1.3.6
 pynliner3==0.6
-pyparsing==2.2.0
 python-jose==1.3.2
 pytz==2017.2
 PyYAML==3.12
-raven==6.0.0
-requests==2.14.2
+raven==6.1.0
+requests==2.17.3
 rsa==3.4.2
 six==1.10.0
+urllib3==1.21.1
 Werkzeug==0.12.2
 whitenoise==3.3.0
 git+https://gitlab.com/aiakos/django-modular-user.git
