--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ dj12==0.1.1
 Django==1.11.2
 django-cache-url==2.0.0
 django-crispy-forms==1.6.1
+django-filter==1.0.4
 django-inlinecss==0.1.2
+djangorestframework==3.6.3
 ecdsa==0.13
 future==0.16.0
 gevent==1.2.2
@@ -18,6 +20,7 @@ google-auth==1.0.1
 greenlet==0.4.12
 gunicorn==19.7.1
 idna==2.5
+Markdown==2.6.8
 mock==2.0.0
 mysqlclient==1.3.10
 openid-connect==0.3.1
