--- a/requirements.txt
+++ b/requirements.txt
@@ -29,10 +29,7 @@ psycopg2==2.7.1
 pyasn1==0.2.3
 pyasn1-modules==0.0.9
 pycrypto==2.6.1
-pycryptodomex==3.4.6
-pyjwkest==1.3.6
 pynliner3==0.6
-python-jose==1.3.2
 pytz==2017.2
 PyYAML==3.12
 raven==6.1.0
@@ -43,3 +40,4 @@ urllib3==1.21.1
 Werkzeug==0.12.2
 whitenoise==3.3.0
 git+https://gitlab.com/aiakos/django-modular-user.git
+git+https://github.com/mpdavis/python-jose.git@b54c12aa54b76d34942f537418399d689d828099
