--- a/requirements.txt
+++ b/requirements.txt
@@ -7,12 +7,12 @@ cssutils==1.0.2
 dj-database-url==0.4.2
 dj-email-url==0.0.10
 dj12==0.2.0
-Django==1.11.4
+Django==1.11.5
 django-cache-url==2.0.0
 django-crispy-forms==1.6.1
 django-filter==1.0.4
 django-inlinecss==0.1.2
-djangorestframework==3.6.3
+djangorestframework==3.6.4
 ecdsa==0.13
 future==0.16.0
 gevent==1.2.2
@@ -22,14 +22,15 @@ gunicorn==19.7.1
 idna==2.6
 Markdown==2.6.9
 mock==2.0.0
-mysqlclient==1.3.10
+mysqlclient==1.3.12
 openid-connect==0.4.0
 pbr==3.1.1
-psycopg2==2.7.3
-pyasn1==0.3.2
-pyasn1-modules==0.0.11
+psycopg2==2.7.3.1
+pyasn1==0.3.3
+pyasn1-modules==0.1.1
 pycrypto==2.6.1
 pynliner3==0.6
+python-jose==1.4.0
 pytz==2017.2
 PyYAML==3.12
 raven==6.1.0
@@ -39,5 +40,4 @@ six==1.10.0
 urllib3==1.22
 Werkzeug==0.12.2
 whitenoise==3.3.0
-git+https://gitlab.com/aiakos/django-modular-user.git
-git+https://github.com/mpdavis/python-jose.git@b54c12aa54b76d34942f537418399d689d828099
+git+https://gitlab.com/aiakos/django-modular-user.git@d8ec0f8cfd6ddf99551c38e687ed7eb65bc7f062
