--- a/requirements.txt
+++ b/requirements.txt
@@ -1,43 +1,42 @@
 beautifulsoup4==4.6.0
+cached-property==1.3.1
 cachetools==2.0.1
-certifi==2017.7.27.1
+certifi==2017.11.5
 chardet==3.0.4
-contextlib2==0.5.5
 cssutils==1.0.2
 dj-database-url==0.4.2
-dj-email-url==0.0.10
-dj12==0.2.0
-Django==1.11.5
+dj12==0.3.0
+Django==1.11.7
 django-cache-url==2.0.0
-django-crispy-forms==1.6.1
-django-filter==1.0.4
+django-crispy-forms==1.7.0
+django-filter==1.1.0
 django-inlinecss==0.1.2
-djangorestframework==3.6.4
+djangorestframework==3.7.3
 ecdsa==0.13
 future==0.16.0
 gevent==1.2.2
-google-auth==1.0.2
+google-auth==1.2.1
 greenlet==0.4.12
 gunicorn==19.7.1
 idna==2.6
 Markdown==2.6.9
 mock==2.0.0
 mysqlclient==1.3.12
-openid-connect==0.4.0
+openid-connect==0.4.2
 pbr==3.1.1
-psycopg2==2.7.3.1
-pyasn1==0.3.3
-pyasn1-modules==0.1.1
+psycopg2==2.7.3.2
+pyasn1==0.3.7
+pyasn1-modules==0.1.5
 pycrypto==2.6.1
 pynliner3==0.6
 python-jose==1.4.0
-pytz==2017.2
+pytz==2017.3
 PyYAML==3.12
-raven==6.1.0
+raven==6.3.0
 requests==2.18.4
 rsa==3.4.2
-six==1.10.0
+six==1.11.0
 urllib3==1.22
 Werkzeug==0.12.2
-whitenoise==3.3.0
+whitenoise==3.3.1
 git+https://gitlab.com/aiakos/django-modular-user.git@d8ec0f8cfd6ddf99551c38e687ed7eb65bc7f062
